--- a/app/src/main/res/layout/activity_sec_act.xml
+++ b/app/src/main/res/layout/activity_sec_act.xml
@@ -45,14 +45,24 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="250dp"
-        android:layout_height="105dp"
+        android:layout_width="253dp"
+        android:layout_height="74dp"
         android:layout_marginStart="80dp"
         android:layout_marginLeft="80dp"
-        android:layout_marginTop="68dp"
+        android:layout_marginTop="40dp"
         android:text="Cryptographic Issues"
         android:textSize="24sp"
         android:textStyle="bold|italic"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
+
+    <WebView
+        android:id="@+id/wb"
+        android:layout_width="306dp"
+        android:layout_height="93dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginLeft="52dp"
+        android:layout_marginBottom="28dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
