--- a/app/src/main/res/layout/activity_libros_act.xml
+++ b/app/src/main/res/layout/activity_libros_act.xml
@@ -76,7 +76,20 @@
         android:layout_marginLeft="170dp"
         android:layout_marginTop="66dp"
         android:onClick="Calculo"
-        android:text="Button"
+        android:text="Calcular"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView7" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginLeft="44dp"
+        android:layout_marginTop="66dp"
+        android:onClick="mqtt"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView7"
+        app:srcCompat="@drawable/librosdos" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
